src/pages/radio.module.scss
@use 'src/styles/theme';

.title {
  padding-block-start: var(--spacing-mega);
  font-size: var(--font-size-xlarge);
  font-weight: var(--font-weight-semibold);
  position: relative;
}

$ribbon-text-color: #fff;
.titleOnRibbon {
  color: $ribbon-text-color;
}

.footerContainer {
  margin-block-start: calc(3 * var(--spacing-mega));
}

.ribbon {
  position: absolute;
  inset-block-start: 0;
  inset-inline: 0;
  block-size: calc(20 * var(--spacing-medium));
  inline-size: 100%;
  @include theme.light {
    background-color: var(--color-success-medium);
  }
  @include theme.dark {
    background-color: var(--color-background-elevated);
  }
}

